ACBrFramework/ACBrTEFDll.pas


    try
    if Assigned(method) then
    begin
          tefHandle^.TEF.OnAntesCancelarTransacao := tefHandle^.EventHandlers.OnAntesCancelarTransacao;
          tefHandle^.EventHandlers.OnAntesCancelarTransacaoCallback := method;
          Result := 0;
    end
    else
    begin
          tefHandle^.TEF.OnAntesCancelarTransacao := nil;
          tefHandle^.EventHandlers.OnAntesCancelarTransacaoCallback := nil;
          Result := 0;
    end;
    except
       on exception : Exception do
       begin
          tefHandle^.UltimoErro := exception.Message;
          Result := -1;
       end
    end;
end;

Function TEF_SetOnDepoisCancelarTransacoes(const tefHandle: PTEFHandle; const method : TDepoisCancelarTransacoesCallback) : Integer ; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF} export;
begin
    if (tefHandle = nil) then
    begin
       Result := -2;
       Exit;
    end;

    try
    if Assigned(method) then
    begin
          tefHandle^.TEF.OnDepoisCancelarTransacoes := tefHandle^.EventHandlers.OnDepoisCancelarTransacoes;
          tefHandle^.EventHandlers.OnDepoisCancelarTransacoesCallback := method;
          Result := 0;
    end
    else
    begin
          tefHandle^.TEF.OnDepoisCancelarTransacoes := nil;
          tefHandle^.EventHandlers.OnDepoisCancelarTransacoesCallback := nil;
          Result := 0;
    end;
    except
       on exception : Exception do
       begin
          tefHandle^.UltimoErro := exception.Message;
          Result := -1;
       end
    end;
end;

Function TEF_SetOnMudaEstadoReq(const tefHandle: PTEFHandle; const method : TMudaEstadoReqCallback) : Integer ; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF} export;
begin
    if (tefHandle = nil) then
    begin
       Result := -2;
       Exit;
    end;

    try
    if Assigned(method) then
    begin
          tefHandle^.TEF.OnMudaEstadoReq := tefHandle^.EventHandlers.OnMudaEstadoReq;
          tefHandle^.EventHandlers.OnMudaEstadoReqCallback := method;
          Result := 0;
    end
    else
    begin
          tefHandle^.TEF.OnMudaEstadoReq := nil;
          tefHandle^.EventHandlers.OnMudaEstadoReqCallback := nil;
          Result := 0;
    end;
    except
       on exception : Exception do
       begin
          tefHandle^.UltimoErro := exception.Message;
          Result := -1;
       end
    end;
end;

Function TEF_SetOnMudaEstadoResp(const tefHandle: PTEFHandle; const method : TMudaEstadoRespCallback) : Integer ; {$IFDEF STDCALL} stdcall; {$ENDIF} {$IFDEF CDECL} cdecl; {$ENDIF} export;
begin
    if (tefHandle = nil) then
    begin
       Result := -2;
       Exit;
    end;

    try
    if Assigned(method) then
    begin
          tefHandle^.TEF.OnMudaEstadoResp := tefHandle^.EventHandlers.OnMudaEstadoResp;
          tefHandle^.EventHandlers.OnMudaEstadoRespCallback := method;
          Result := 0;
    end
    else
    begin
          tefHandle^.TEF.OnMudaEstadoResp := nil;
          tefHandle^.EventHandlers.OnMudaEstadoRespCallback := nil;
          Result := 0;
    end;
    except
       on exception : Exception do
       begin
          tefHandle^.UltimoErro := exception.Message;
          Result := -1;
       end
    end;
end;

{Eventos}

procedure TEventHandlers.OnAguardaResp(Arquivo: String; SegundosTimeOut : Integer; var Interromper : Boolean);
begin
   OnAguardaRespCallback(@Arquivo, SegundosTimeOut, Interromper);
end;

procedure TEventHandlers.OnExibeMsg(Operacao : TACBrTEFDOperacaoMensagem; Mensagem : String; var AModalResult : TModalResult);
begin
   OnExibeMsgCallback(Operacao, @Mensagem, AModalResult);
end;

procedure TEventHandlers.OnBloqueiaMouseTeclado(Bloqueia : Boolean; var Tratado : Boolean);
begin
   OnBloqueiaMouseTecladoCallback(Bloqueia, Tratado);
end;

procedure TEventHandlers.OnRestauraFocoAplicacao(var Tratado : Boolean);
begin
   OnRestauraFocoAplicacaoCallback(Tratado);
end;

procedure TEventHandlers.OnLimpaTeclado(var Tratado : Boolean);
begin
   OnLimpaTecladoCallback(Tratado);
end;

procedure TEventHandlers.OnComandaECF(Operacao : TACBrTEFDOperacaoECF; Resp : TACBrTEFDResp; var RetornoECF : Integer);
begin
   OnComandaECFCallback(Operacao, @Resp, RetornoECF);
end;

procedure TEventHandlers.OnComandaECFSubtotaliza(DescAcre : Double; var RetornoECF : Integer);
begin
  OnComandaECFSubtotalizaCallback(DescAcre, RetornoECF);
end;

procedure TEventHandlers.OnComandaECFPagamento(IndiceECF : String; Valor : Double; var RetornoECF : Integer);
begin
  OnComandaECFPagamentoCallback(@IndiceECF, Valor, RetornoECF);
end;

procedure TEventHandlers.OnComandaECFAbreVinculado(COO, IndiceECF : String; Valor : Double; var RetornoECF : Integer);
begin
  OnComandaECFAbreVinculadoCallback(@COO, @IndiceECF, Valor, RetornoECF);
end;

procedure TEventHandlers.OnComandaECFImprimeVia(TipoRelatorio : TACBrTEFDTipoRelatorio; Via : Integer; ImagemComprovante : TStringList; var RetornoECF : Integer );
var
  i : Integer;
  linha : String;
  imagem : array of PChar;
begin

   SetLength(imagem, ImagemComprovante.Count);
   for i := 0 TO ImagemComprovante.Count do
   Begin
        linha := ImagemComprovante.ValueFromIndex[i];
        imagem[i] := @linha;
   end;

   OnComandaECFImprimeViaCallback(TipoRelatorio, Via, imagem, ImagemComprovante.Count, RetornoECF);

   SetLength(imagem, 0);
end;

procedure TEventHandlers.OnInfoECF(Operacao : TACBrTEFDInfoECF; var RetornoECF : String );
var
  retorno : Integer;
begin
    OnInfoECFCallback(Operacao, retorno);
    RetornoECF := IntToStr(retorno);
end;

procedure TEventHandlers.OnAntesFinalizarRequisicao(Req : TACBrTEFDReq);
begin
    OnAntesFinalizarRequisicaoCallback(@Req);
end;

procedure TEventHandlers.OnDepoisConfirmarTransacoes(RespostasPendentes : TACBrTEFDRespostasPendentes);
begin
     OnDepoisConfirmarTransacoesCallback(@RespostasPendentes);
end;

procedure TEventHandlers.OnAntesCancelarTransacao(RespostaPendente : TACBrTEFDResp);
begin
     OnAntesCancelarTransacaoCallback(@RespostaPendente);
end;

procedure TEventHandlers.OnDepoisCancelarTransacoes(RespostasPendentes : TACBrTEFDRespostasPendentes);
begin
     OnDepoisCancelarTransacoesCallback(@RespostasPendentes);
end;

procedure TEventHandlers.OnMudaEstadoReq(EstadoReq  : TACBrTEFDReqEstado);
begin
   OnMudaEstadoReqCallback(EstadoReq);
end;

procedure TEventHandlers.OnMudaEstadoResp(EstadoResp : TACBrTEFDRespEstado);
begin
  OnMudaEstadoRespCallback(EstadoResp);
end;

exports

{ Funções }
TEF_Create, TEF_Destroy,
TEF_GetUltimoErro,

TEF_Inicializar,
TEF_GetGPAtual, TEF_SetGPAtual,
TEF_CRT,

{Eventos}

TEF_SetOnAguardaResp,
TEF_SetOnExibeMsg,
TEF_SetOnBloqueiaMouseTeclado,
TEF_SetOnRestauraFocoAplicacao,
TEF_SetOnLimpaTeclado,
TEF_SetOnComandaECF,
TEF_SetOnComandaECFSubtotaliza,
TEF_SetOnComandaECFPagamento,
TEF_SetOnComandaECFAbreVinculado,
TEF_SetOnComandaECFImprimeVia,
TEF_SetOnInfoECF,
TEF_SetOnAntesFinalizarRequisicao,
TEF_SetOnDepoisConfirmarTransacoes,
TEF_SetOnAntesCancelarTransacao,
TEF_SetOnDepoisCancelarTransacoes,
TEF_SetOnMudaEstadoReq,
TEF_SetOnMudaEstadoResp

;

end.
